Changes after review p1